Base line, create connection in mongo and POST users working fine
